Small content updates

--- a/docs/config/sfmc-contact-deletion.mdx
+++ b/docs/config/sfmc-contact-deletion.mdx
@@ -226,7 +226,7 @@ You don't need anything but the Subscriber Key for essential contact deletion. H
 
 #### Contact Deletion Script Activity
 
-Below you can find ready-to-use SSJS snippet for Script Activity. Change `clietnSecret`, `clientID` and `clientBase` variables to data you saved during [Installed Package configuration](#sfmc-api-contact-deletion). If needed, change also the `contactDeletionDEKey`, `errorDE` and `automationName` variables to reflect your configuration.
+Below you can find ready-to-use SSJS snippet for Script Activity. Change `clientSecret`, `clientID` and `clientBase` variables to data you saved during [Installed Package configuration](#sfmc-api-contact-deletion). If needed, change also the `contactDeletionDEKey`, `errorDE` and `automationName` variables to reflect your configuration.
 
 To learn more about `errorDE` check my [debugging guide](../ssjs/debugging-ssjs.mdx#error-logging). You will find there also details about [helper functions](../ssjs/debugging-ssjs.mdx#error-handler-function) from the script.
 
