Small content updates

--- a/docs/sql/snippets/sfmc-sql-debugging-email-sends.mdx
+++ b/docs/sql/snippets/sfmc-sql-debugging-email-sends.mdx
@@ -179,7 +179,7 @@ If, after all those checks, there is still no answer to the root cause - create 
 
 ### Email Send Debugging Flowchart
 
-Prefer visualisation for complex process steps? Got you covered:
+Prefer complex processes visualised? Got you covered:
 
 <Image img={flowchart} alt='Flowchart with visual representation of the debugging email sends process'/>
 
