Additional of hidden Items due to no action use case

--- a/docs/interaction-studio/is-catalog-architecture.mdx
+++ b/docs/interaction-studio/is-catalog-architecture.mdx
@@ -373,7 +373,7 @@ If Items are not [missing in the Interaction Studio Catalog](#items-missing-in-i
 Officially, the only option to export your Catalog data is to open the Catalog listing in the Interaction Studio UI and click the Export button in the top right. Sounds easy, but there are three big problems with it:
 
 1. **You have limited control over what it will export** - The export file returns ID, Name, Views, ViewTime, AverageViewSeconds and URL. The Product Catalog will also contain Cart, Purchase, Revenue, Price, Categories, and all related Catalog Objects (each as concatenated IDs without any delimiter...). Och and you cannot Export Categories at all. No way to get any additional details like other attributes (especially the key ones like Inventory Stock, Promotion State, Archived, etc.).
-2. **You might not be able to export all Items** - The export file will contain only the Items in the current Catalog view. It means that the Date Picker in the top right impact the scope of returned Items. Date Picker has a limited range possible, so you might need to do multiple exports and deduplicate outcomes in the future.
+2. **You might not be able to export all Items** - The export file will contain only the Items in the current Catalog view. It means that the Date Picker in the top right impact the scope of returned Items. Date Picker has a limited range possible, so you might need to do multiple exports and deduplicate outcomes in the future. Items that do not yet have any action (view, cart or purchase) will also not be visible.
 3. **You cannot export archived Items** - Export contains only visible Items - and archived ones are hidden. So no luck. I discuss partial workarounds [here](#view-archived-items-in-the-is-catalog).
 
 Ok, you know all the limitations. What now?
