Updated no longer free feature on demand

--- a/docs/config/sfmc-features-on-demand.mdx
+++ b/docs/config/sfmc-features-on-demand.mdx
@@ -128,7 +128,7 @@ Allow Blank File Processing | By default, if your import activity encounters bla
 
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
-Custom Data Extension Templates | Allows you to request the creation of a custom Data Extension template that users can later use to auto-populate DE configuration. | N/A | Free
+Custom Data Extension Templates | Allows you to request the creation of a custom Data Extension template that users can later use to auto-populate DE configuration. | N/A | Paid
 Custom Data Views | Allows you to request the creation of Custom Data View. Mindblowing option. | [Example Custom Data View](https://salesforce.stackexchange.com/a/293395/91679) | Paid
 Data Extension Index | Required for ClaimRow() AMPScript function and an option of last resort for performance optimization in some cases. | [Applying an Index to a Data Extension](https://help.salesforce.com/articleView?id=000341701&language=en_US&mode=1&type=1) | Free
 
