Fix to Primary Keys issue on Enhanced Send Log DE template found by Rob Rice

--- a/docs/config/sfmc-enhanced-send-log.mdx
+++ b/docs/config/sfmc-enhanced-send-log.mdx
@@ -143,9 +143,9 @@ Create standard Data Extension with more user-friendly names and extend it with 
 | FirstOpenDate | Date | | | Yes |
 | FirstClickDate | Date | | | Yes |
 | BounceDate | Date | | | Yes |
-| JobID | Numeric | | | Yes |
-| ListID | Numeric | | | Yes |
-| BatchID | Numeric | | | Yes |
+| JobID | Numeric | | Yes | Yes |
+| ListID | Numeric | | Yes | Yes |
+| BatchID | Numeric | | Yes | Yes |
 | TriggeredSendID | String | 36 | | Yes |
 | ErrorCode | Numeric | | | Yes |
 
