Additional reason for data not saving to IS Catalog

--- a/docs/interaction-studio/is-catalog-architecture.mdx
+++ b/docs/interaction-studio/is-catalog-architecture.mdx
@@ -365,8 +365,9 @@ If you cannot find an Item in the Catalog UI, there are three possible options:
 If Items are not [missing in the Interaction Studio Catalog](#items-missing-in-is-catalog), but you don't see the data you expect, there are three options:
 
 1. **You have Strict Catalog Security enabled** - In Interaction Studio » Settings » Catalog and Profile Objects » Catalog Settings » Security section » Strict Catalog Security option. If it is checked and you use Sitemap, only the Item ID will be added to the Catalog. It is a security feature that protects the integrity of your data, but you should use it only if you are using [ETL](#2-interaction-studio-with-etl) to populate the Catalog metadata. You should uncheck if you use [Sitemap](#1-interaction-studio-with-sitemap) to build Catalog.
-2. **You have a bug in the Sitemap** - Use Visual Editor from the Salesforce Interactions browser extension and execute Sitemap in it on the Item page. Check the left pane to see if the data is populated there. If not - you must fix the JavaScript that captures that data from the website.
-3. **You have another bug in the Sitemap** - If Visual Editor shows all the data, but you still don't have it on most Items, the most probable reason is an issue with timing. Depending on how you capture Item metadata, some might not be available when the Sitemap executes on page load (but is ready when you launch the browser extension). Add a `console.log` to see whether the data is ready when needed, and leverage JS promises to solve the issue.
+2. **You send item localization with the Catalog Localization switched off** - In Interaction Studio » Settings » Catalog and Profile Objects » Catalog Settings » Locale section » Localization of Catalog Metadata Based on Page Locale option. If it is unchecked, but you push locale along with Item data, it will be ignored by Interaction Studio. Either remove the locale information or enable that option.
+3. **You have a bug in the Sitemap** - Use Visual Editor from the Salesforce Interactions browser extension and execute Sitemap in it on the Item page. Check the left pane to see if the data is populated there. If not - you must fix the JavaScript that captures that data from the website.
+4. **You have another bug in the Sitemap** - If Visual Editor shows all the data, but you still don't have it on most Items, the most probable reason is an issue with timing. Depending on how you capture Item metadata, some might not be available when the Sitemap executes on page load (but is ready when you launch the browser extension). Add a `console.log` to see whether the data is ready when needed, and leverage JS promises to solve the issue.
 
 ### Export full IS Catalog data
 
