--- a/docs/config/sfmc-enhanced-send-log.mdx
+++ b/docs/config/sfmc-enhanced-send-log.mdx
@@ -160,7 +160,7 @@ SELECT
     , sl.EmailAddr              AS EmailAddress
     , sl.BusinessSpecificField1 AS BusinessSpecificField1
     , sl.BusinessSpecificField2 AS BusinessSpecificField2
-    , sl.EmailName_              AS EmailName
+    , sl.EmailName              AS EmailName
     , j.JourneyName             AS JourneyName
     , j.VersionNumber           AS JourneyVersion
     , s.EventDate               AS SentDate
