--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -119,14 +119,15 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 
 Many things in Salesforce Marketing Cloud aren't coding but have a massive impact on the code. Permissions. System Data Views. Configuration options. Here I focus on the most important ones that are crucial for Marketing Cloud developers.
 
-- [Permissions](./config/sfmc-permissions.mdx)
 - [System Data Views](./config/sfmc-system-data-views.mdx)
 - [Contact Deletion Process](./config/sfmc-contact-deletion.mdx)
+- [MCC Integration Patterns](./config/sfmc-mcc-integration-patterns.mdx)
 - [Enhanced Send Log](./config/sfmc-enhanced-send-log.mdx)
 - [Behavioral Triggers](./config/sfmc-behavioral-triggers.mdx)
 - [Power of Code Resources](./config/sfmc-code-resource.mdx)
 - [AppExchange Solutions](./config/sfmc-appexchange-solutions.mdx)
 - [Features On Demand](./config/sfmc-features-on-demand.mdx)
+- [Permissions](./config/sfmc-permissions.mdx)
 
 <Button
     link='./category/sfmc-config/'
