--- a/docs/js/snippets/export-import-document-sfmc-roles.mdx
+++ b/docs/js/snippets/export-import-document-sfmc-roles.mdx
@@ -14,7 +14,13 @@ import { Button } from '../../../src/components/Buttons.js';
 
 While you get a set of standard user Roles in Salesforce Marketing Cloud, those are rarely enough. Instead, they are the base on which you can create custom-tailored solutions that align with your business architecture.
 
-On top of that, standard Roles are silently changing from release to release as [permissions](../../config/sfmc-permissions.mdx) come and go, so keeping track of them is crucial to have a clear picture of what your users can do.
+:::note You Should Know
+
+The best way to work with Roles and Permissions in Salesforce Marketing Cloud is to leverage standard roles and build on top of them with custom permissions/roles.
+
+:::
+
+On top of that, standard Roles are silently changing from release to release as permissions come and go, so keeping track of them is crucial to have a clear picture of what your users can do.
 
 Marketing Cloud doesn't make it easy. There is no option to clone existing Roles to serve as a starting point for a new custom one. There is no option to export and import them between SFMC accounts. There is no option to create good documentation on them (unless you have a kink for super long print screens).
 
@@ -24,13 +30,15 @@ Fear not - you don't have to be a developer to leverage it. I will describe ever
 
 :::note You Should Know
 
-If you want to learn more about:
+When working with multiple roles or overlapping permissions, be sure to check what is the outcome on the user.
 
-- standard vs custom roles,
-- permission overlap logic,
-- the meaning behind their sometimes very cryptic names
+Marketing Cloud goes with the most restrictive resulting permission possible:
 
-Check out my [article on SFMC Permissions](../../config/sfmc-permissions.mdx).
+1. If at least one permission (role-based or individual) is set to Deny - the user will __not__ be able to use the feature.
+2. If there is neither Allow nor Deny permission - the user will __not__ be able to use the feature.
+3. If there is at least one Allow permission and not even one Deny permission - the user will be able to use the feature.
+
+You can check the outcome by going to Setup > Users > Users > clicking checkbox next to a user > clicking Manage Roles > Edit Permissions. In this place, you can not only configure individual permissions but also, by expanding to the final permission level, check current result permission along with the source for that state.
 
 :::
 
@@ -158,7 +166,7 @@ Add the Name of the Role and its purpose stored in the Description field, and th
 
 ## Backup of Standard Roles
 
-As the [default System Roles permissions](../../config/sfmc-permissions.mdx) in Salesforce Marketing Cloud can be edited freely and [currently there is no easy way to revert those changes](../../../../sites/ideas/marketing-cloud-ideas/#restore-default-permissions-for-sfmc-standard-system-roles), I created a backup repository for you with all out-of-the-box configurations.
+As the default System Roles permissions in Salesforce Marketing Cloud can be edited freely and [currently there is no easy way to revert those changes](../../../../sites/ideas/marketing-cloud-ideas/#restore-default-permissions-for-sfmc-standard-system-roles), I created a backup repository for you with all out-of-the-box configurations.
 
 <Button
  link='https://github.com/MateuszDabrowski/sfmc-roles-backup'
