Additional SFMC features on demand

--- a/docs/config/sfmc-features-on-demand.mdx
+++ b/docs/config/sfmc-features-on-demand.mdx
@@ -47,6 +47,7 @@ Multi-Org Account | Allows you to connect different Sales/Service Cloud Orgs for
 Restore Encryption at Rest Key | If you revoked (Bring Your Own) Key for Encryption at Rest, this allows you to restore the key and retain the data if you act fast | [Restore SFMC Encryption Key](https://help.salesforce.com/articleView?id=sf.mc_overview_restore_byok.htm&type=5) | ?
 SSO Metadata | Allows you to implement Single Sign-On for your Marketing Cloud instance.| [SSO Implementation](https://help.salesforce.com/articleView?id=000356286&type=1&language=en_US&mode=1) | Free
 Custom Access Permissions for SFTP | You can ask Support to configure per-folder permissions for your FTP users | N/A | Free
+SFTP Limited Access | You can ask Salesforce Support to limit an SFTP User access to only specific SFTP Folders | N/A | Free
 
 ## Deliverability Features
 
@@ -83,6 +84,7 @@ Additional Email Attributes | Allows you to use custom email attributes to use f
 Microsites | Allows you to access a Classic view from the Email Studio - Content and create Microsites. As it is a legacy feature that is being sunset, you will need a strong business use case to get it. | N/A | Free
 Custom Preference Center Links | SFMC has a set of personalisation strings for preference management: `%%subscription_center_url%%`, `%%profile_center_url%%`, `%%unsub_center_url%%`. By default they link to the respective out-of-the-box pages, but support can redirect them to any other URL on request | N/A | Free
 Custom List-Unsubscribe Header Link | SFMC automatically unsubscribes your contacts from the list assigned to the email when List Unsubscribe is triggered. Support can redirect it to any other URL (like Preference Center or custom Cloud Page handler). | N/A | Free
+Custom Transactional Email Header & Footer | You can ask Salesforce Support to update your transactional emails header and footer | N/A | Free
 
 ## Mobile Studio Features
 
